test/negative/unary-U01.cfr
// Test for negative until constraint

a
 b ?
  c ?
  d ?
  [ U d]



